--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "react": "17.0.1",
     "react-color": "^2.19.3",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "2.2.1"
   }
 }
